update swagger.json documentacao
